--- a/public/404.html
+++ b/public/404.html
@@ -5,26 +5,29 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>You stole us!</title>
 	<style type="text/css">
 		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
 		div.dialog {
 			width: 25em;
 			padding: 0 4em;
 			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
 			border-right-color: #999;
 			border-bottom-color: #999;
 		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+		h1 { font-size: 125%; color: #444; line-height: 1.5em; }
+		img { margin: 3em 0; }
+		a { color: #000;}
 	</style>
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
+  <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>You stole us!</h1>
+	<img src="images/404.png" alt="You broke it!" />
+    <p>Nah, the page your're looking for doesn't exist.</p>
+	<p><small>Try <a href="/">going back</a> or refreshing the page.</small></p>
   </div>
 </body>
 </html>
