--- a/public/422.html
+++ b/public/422.html
@@ -5,26 +5,29 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>The change you wanted was rejected (422)</title>
+  <title>You can't get it!</title>
 	<style type="text/css">
 		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
 		div.dialog {
 			width: 25em;
 			padding: 0 4em;
 			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
 			border-right-color: #999;
 			border-bottom-color: #999;
 		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+		h1 { font-size: 125%; color: #444; line-height: 1.5em; }
+		img { margin: 3em 0; }
+		a { color: #000;}
 	</style>
 </head>
 
 <body>
-  <!-- This file lives in public/422.html -->
+  <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>You can't get it!</h1>
+	<img src="images/422.png" alt="You broke it!" />
+    <p>Nah, it's just that the requested page is protected.</p>
+	<p><small>Try to <a href="/login">log in</a> or <a href="/signup">signup</a> for a new account.</small></p>
   </div>
 </body>
 </html>
