--- a/public/500.html
+++ b/public/500.html
@@ -5,29 +5,29 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>You broke it!</title>
 	<style type="text/css">
 		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
 		div.dialog {
 			width: 25em;
 			padding: 0 4em;
 			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
 			border-right-color: #999;
 			border-bottom-color: #999;
 		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+		h1 { font-size: 125%; color: #444; line-height: 1.5em; }
+		img { margin: 3em 0; }
+		a { color: #000;}
 	</style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-    <p><small>(If you're the administrator of this website, then please read
-    the log file "<%=h RAILS_ENV %>.log"
-    to find out what went wrong.)</small></p>
+    <h1>You broke it!</h1>
+	<img src="images/500.png" alt="You broke it!" />
+    <p>Nah, just kidding, something just went wrong.</p>
+	<p><small>Try <a href="/">going back</a> or refreshing the page.</small></p>
   </div>
 </body>
 </html>
