images routes on static error pages

--- a/public/404.html
+++ b/public/404.html
@@ -25,8 +25,8 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>You stole us!</h1>
-	<img src="images/404.png" alt="You broke it!" />
-    <p>Nah, the page your're looking for doesn't exist.</p>
+	<img src="/images/404.png" alt="You broke it!" />
+    <p>Nah, the page you're looking for doesn't exist.</p>
 	<p><small>Try <a href="/">going back</a> or refreshing the page.</small></p>
   </div>
 </body>
