--- a/public/500.html
+++ b/public/500.html
@@ -25,7 +25,7 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>You broke it!</h1>
-	<img src="images/500.png" alt="You broke it!" />
+	<img src="/images/500.png" alt="You broke it!" />
     <p>Nah, just kidding, something just went wrong.</p>
 	<p><small>Try <a href="/">going back</a> or refreshing the page.</small></p>
   </div>
