--- a/public/422.html
+++ b/public/422.html
@@ -25,7 +25,7 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>You can't get it!</h1>
-	<img src="images/422.png" alt="You broke it!" />
+	<img src="/images/422.png" alt="You broke it!" />
     <p>Nah, it's just that the requested page is protected.</p>
 	<p><small>Try to <a href="/login">log in</a> or <a href="/signup">signup</a> for a new account.</small></p>
   </div>
